{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 178,
  "lineage": "6b67c28c-a84c-e7b4-ee95-ffec53ed69d2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "flask_app_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:295586988587:loadbalancer/app/flask-app-demo/85f408e60e893581",
            "arn_suffix": "app/flask-app-demo/85f408e60e893581",
            "desync_mitigation_mode": "defensive",
            "dns_name": "flask-app-demo-170386181.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:295586988587:loadbalancer/app/flask-app-demo/85f408e60e893581",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "flask-app-demo",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d63b26aec67df78d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03a06759a9f630d49"
              },
              {
                "subnet_id": "subnet-047871d9285231653"
              },
              {
                "subnet_id": "subnet-0e1d391b7419ce723"
              }
            ],
            "subnets": [
              "subnet-03a06759a9f630d49",
              "subnet-047871d9285231653",
              "subnet-0e1d391b7419ce723"
            ],
            "tags": {
              "Name": "flask-app-demo"
            },
            "tags_all": {
              "Name": "flask-app-demo"
            },
            "vpc_id": "vpc-0aeb6e9433388981e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.flask_app_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "flask_app_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:295586988587:listener/app/flask-app-demo/85f408e60e893581/ba1fafbe391b786d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:295586988587:targetgroup/flask-app-demo/3b4927062036761d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:295586988587:listener/app/flask-app-demo/85f408e60e893581/ba1fafbe391b786d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:295586988587:loadbalancer/app/flask-app-demo/85f408e60e893581",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.flask_app_demo",
            "aws_lb_target_group.flask_app_demo",
            "aws_security_group.flask_app_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "flask_app_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:295586988587:targetgroup/flask-app-demo/3b4927062036761d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:295586988587:listener-rule/app/flask-app-demo/85f408e60e893581/ba1fafbe391b786d/c42eaf0ddc68d3e7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:295586988587:listener-rule/app/flask-app-demo/85f408e60e893581/ba1fafbe391b786d/c42eaf0ddc68d3e7",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:295586988587:listener/app/flask-app-demo/85f408e60e893581/ba1fafbe391b786d",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.flask_app_demo",
            "aws_lb_listener.flask_app_demo",
            "aws_lb_target_group.flask_app_demo",
            "aws_security_group.flask_app_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "flask_app_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:295586988587:targetgroup/flask-app-demo/3b4927062036761d",
            "arn_suffix": "targetgroup/flask-app-demo/3b4927062036761d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:295586988587:targetgroup/flask-app-demo/3b4927062036761d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "flask-app-demo",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0aeb6e9433388981e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "flask_app_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:295586988587:security-group/sg-0d63b26aec67df78d",
            "description": "Allow inbound traffic to flask app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d63b26aec67df78d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "flask-app-demo",
            "name_prefix": "",
            "owner_id": "295586988587",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aeb6e9433388981e"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}